--- a/index.html
+++ b/index.html
@@ -14,7 +14,15 @@
 
     <script>
       //Your web app's Firebase configuration
-
+      var firebaseConfig = {
+    apiKey: "AIzaSyAOUEwrPnS60XesonFwolytAPL9vS14Eac",
+    authDomain: "car-racing-multiplayer-80c61.firebaseapp.com",
+    databaseURL: "https://car-racing-multiplayer-80c61.firebaseio.com",
+    projectId: "car-racing-multiplayer-80c61",
+    storageBucket: "car-racing-multiplayer-80c61.appspot.com",
+    messagingSenderId: "1068815143261",
+    appId: "1:1068815143261:web:6dc057e4408832bd0118b4"
+  };
       // // Initialize Firebase
       // firebase.initializeApp(firebaseConfig);
 
